css/style.css
body {
  background-color: #ffc310;
  /* font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif; */
  background-image: url(../assets/img/bg.svg);
  font-family: "Lato", sans-serif;
}
.inicio {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  /* background-color: rgba(240, 248, 255, 0.144); */
  width: 90vw;
  height: 90vh;
  margin: auto;
}

.inicio > h3 {
  font-family: "EB Garamond", serif;
  color: #178a73;
  margin: 0;
  /* text-shadow: 0px 1px #ffffff; */
  font-size: 5rem;
}
.inicio > p {
  color: rgba(250, 250, 250, 0.541);
  font-size: larger;
  font-weight: 500;
}
.boton {
  text-decoration: none;
  background-color: #ce3a52;
  color: #ffffff;
  text-align: center;
  padding: 1rem 2rem;
  border-radius: 10px;
  /* margin-top: 1rem; */
}

a {
  text-decoration: none;
}

/* ------------------------------------------------------ */
.botones {
  display: flex;
  justify-content: space-between;
  outline: none;
}
form {
  width: 100%;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
}
fieldset {
  display: flex;
  flex-direction: column;
  width: 90%;
  height: 100%;
  gap: 1rem;
  justify-content: center;
  align-items: center;
  border-width: 0px;
}
fieldset > .question {
  width: 100%;
  height: 9.5rem;
  background-color: #361e70;
  border-radius: 2px;
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: url(../assets/img/bg2.svg);
  background-size: 100%;
  outline-style: none;
  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
}
.question > h3 {
  color: #e2e2e2;
  font-size: 100%;
  text-align: center;
}

.answer {
  width: 98%;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: #464646;
  border-radius: 5px;
  font-size: 25px;
}

.question .answer {
  border: none;
}

/* .color1 {
  background-color: #7480c4;
}
.color2 {
  background-color: #7480c4;
}
.color3 {
  background-color: #7480c4;
}
.color4 {
  background-color: #7480c4;
} */

/* label {
  width: 100%;
  height: 5rem;
  text-align: center;
} */

label {
  height: 3rem;
  width: 100%;
  margin: 0.5rem;
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  color: #464646;
  border-radius: 5px;
  font-size: 25px;
  background-color: #ebebeb;
  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
  position: relative;
}

input {
  background-color: aqua;
  height: 3rem;
  width: 100%;
  height: auto;
  position: absolute;
  /* visibility: hidden; */
}
input:checked + label::after {
  background-color: rgb(44, 189, 44);
}

.correcta {
  background-color: rgb(147, 224, 147);
}

.incorrecto {
  background-color: red;
}
.responses {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

/* //--------------------------------------------------------------- */

@media only screen and (min-width: 760px) {
}

